--- a/test.tex
+++ b/test.tex
@@ -51,25 +51,24 @@
 
 
 
-% \part{Tweedimensionale bewegingen}
+\part{Tweedimensionale bewegingen}
 
-
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
+%\activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
+%\activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
+% \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex} \todo{Moet hier weg. Eigenschap snelheid raakt aan de baan > basisbegrippen. Ook voorbeeld naar basisbegrippen}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
 
 
-\part{De beginselen van Newton}
+% \part{De beginselen van Newton}
 
 % \activitychapter{6dejaar/dynamica/nwtn_intro.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
 % \activitychapter{6dejaar/dynamica/nwtn_oef.tex} = te verwijderen ...
-\activitychapter{6dejaar/dynamica/nwtn_denkvragen.tex}
-\activitychapter{6dejaar/dynamica/nwtn_vraagstukken.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_denkvragen.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_vraagstukken.tex}
 % % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
 % % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
