--- a/test.tex
+++ b/test.tex
@@ -53,11 +53,11 @@
 
 \part{Tweedimensionale bewegingen}
 
-%\activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
-%\activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex} \todo{Moet hier weg. Eigenschap snelheid raakt aan de baan > basisbegrippen. Ook voorbeeld naar basisbegrippen}
 \activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
-% \activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
+\activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
 
 
 % \part{De beginselen van Newton}
