--- a/lambregs_origineel/oefeningen/Oef1D/main.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/main.tex
@@ -2,7 +2,7 @@
 
 
 
-\documentclass[12pt,a4paper]{article}
+%\documentclass[12pt,a4paper]{article}
 
 \usepackage{import}
 \usepackage{./config/preambule}
