--- a/6dejaar/vectoren/vct_oef_reeks1.tex
+++ b/6dejaar/vectoren/vct_oef_reeks1.tex
@@ -80,7 +80,7 @@ Bepaal grafisch en kwantitatief de resultante van de gegeven vectoren.
 			\draw[->, very thick, blue] (O)--(A) node[midway, below]{$\vec{a}$};
 			\draw[->, very thick, green] (O)--(B) node[pos=0.7, below right]{$\vec{b}$};
 			\draw[->, very thick, red] (O)--(C) node[midway, left]{$\vec{c}$};
-			\draw[->, very thick, yellow] (O)--(D) node[midway, left]{$\vec{d}$};
+			\draw[->, very thick, cyan] (O)--(D) node[midway, left]{$\vec{d}$};
 		
 			\draw pic[ pic text= \(\alpha\), draw,  angle radius=0.5cm]{angle = B--O--C};
 			\draw pic[ draw, angle radius=0.2cm]{right angle = D--O--A};
