--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -3,12 +3,11 @@
 
 \addPrintStyle{../..}
 
-\ifdefined\HCode
-  \renewcommand{\includegraphics}[2][]{%
-    \HCode{<img src="#2" alt=""/>}%
-  }
-\fi
-
+% \ifdefined\HCode
+%   \renewcommand{\includegraphics}[2][]{%
+%     \HCode{<img src="#2" alt=""/>}%
+%   }
+% \fi
 
 \begin{document}
 	\author{Bart Lambregs, Vincent Gellens}
