--- a/6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex
+++ b/6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex
@@ -1,27 +1,21 @@
 \documentclass{ximera}
-\input{../preamble}
+\input{../../preamble}
 
 \addPrintStyle{..}
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Horizontale worp}{}
+	\xmtitle{De horizontale worp}{}
     \xmsource\xmuitleg
 
-
-
-
-	%%%\section{De horizontale worp}
-
-	We bekijken een voorbeeld van een tweedimensionale beweging. Wanneer een object horizontaal met een bepaalde beginsnelheid wordt gecatapulteerd, noemen we die beweging een horizontale worp. Wij beschouwen de worp in het luchtledige.
-	\begin{image}
-	
+We bekijken een voorbeeld van een tweedimensionale beweging. Wanneer een object horizontaal met een bepaalde beginsnelheid wordt gekatapulteerd, noemen we die beweging een horizontale worp. Wij beschouwen de worp in het luchtledige.
+\begin{image}
 	\includegraphics[width=0.6\textwidth]{horizontaleworp_tekening}
-	\end{image}
-	\captionof{figure}{De snelheid in horizontale richting verandert niet, die in de verticale richting neemt lineair toe in de tijd}
-	%%%\newline
-	In de beschrijving kunnen we de $x$-as horizontaal en de $y$-as verticaal naar beneden nemen. Omdat er volgens de $x$-as geen versnelling is het lichaam volgens de $y$-as valt met de valversnelling $g$, kunnen we de formules voor een ERB en een EVRB (Zie (\ref{x(t)0}) en (\ref{v(t)0})) op de afzonderlijke assen toepassen en zo de volledige beweging beschrijven.%\footnote{Strikt genomen zoeken we hier nog niet naar een verklaring (die voor de horizontale beweging in de wet van de traagheid zit) maar beschrijven we enkel de beweging. Waarom de versnelling nul en $g$ is, vragen we ons dus zogezegd nog even niet af.}.
-	\begin{equation*}
+\end{image}
+\captionof{figure}{De snelheid in horizontale richting verandert niet, die in de verticale richting neemt lineair toe in de tijd}
+
+In de beschrijving kunnen we de $x$-as horizontaal en de $y$-as verticaal naar beneden nemen. Omdat er volgens de $x$-as geen versnelling is het lichaam volgens de $y$-as valt met de valversnelling $g$, kunnen we de formules voor een ERB en een EVRB (Zie (\ref{x(t)0}) en (\ref{v(t)0})) op de afzonderlijke assen toepassen en zo de volledige beweging beschrijven.%\footnote{Strikt genomen zoeken we hier nog niet naar een verklaring (die voor de horizontale beweging in de wet van de traagheid zit) maar beschrijven we enkel de beweging. Waarom de versnelling nul en $g$ is, vragen we ons dus zogezegd nog even niet af.}.
+\begin{equation*}
 	\left\{
 	\begin{array}{l}
 	a_x=0\\
@@ -42,47 +36,31 @@
 	y=\frac{1}{2}gt^2
 	\end{array}
 	\right.
-	\end{equation*}
-	De baanvergelijking vinden we zoals eerder vermeld, door $t$ in functie van $x$ te schrijven $x=v_0t\Leftrightarrow t=\frac{x}{v_0}$ en dit in $y(t)$ te substitueren:
-	\begin{eqnarray*}
-	%&&x=v_0t\Leftrightarrow t=\frac{x}{v_0}\\
+\end{equation*}
+De baanvergelijking vinden we zoals eerder vermeld, door $t$ in functie van $x$ te schrijven $x=v_0t\Leftrightarrow t=\frac{x}{v_0}$ en dit in $y(t)$ te substitueren:
+\begin{eqnarray*}
 	y=\frac{1}{2}gt^2=\frac{1}{2}g\left(\frac{x}{v_0}\right)^2=\frac{g}{2v_0^2}x^2
-	\end{eqnarray*}
-	De baan is dus een parabool.
-	
-	%%\newpage
-	
-	%oefening horizontale worp
-	
+\end{eqnarray*}
+De baan is dus een parabool.
+
+\begin{example}
+	Een vliegtuig vliegt met een snelheid van \SI{450}{km/h} op een hoogte van \SI{920}{m}.
 	\begin{enumerate}
-	\item[\textbf{Opdracht}]\textsf{Een vliegtuig vliegt met een snelheid van $450\rm\,km/h$ op een hoogte van $920\rm\,m$.
-	\begin{enumerate}
-	\item Hoever voor het doel moeten de voedselpakketten gelost worden
-	om op het doel terecht te komen?
-	\item Hoeveel tijd hebben de pakketten nodig om het doel te bereiken?
+		\item Hoever voor het doel moeten de voedselpakketten gelost worden om op het doel terecht te komen?
+		\item Hoeveel tijd hebben de pakketten nodig om het doel te bereiken?
 	\end{enumerate}
-	\item[\textit{gegeven}]$v_0=125\rm\,m/s$%%%\newline$y=920\rm\,m$
-	\item[\textit{gevraagd}]$x$, $t$
-	\item[\textit{oplossing}]De afstand waarover de voedselpakketten in
-	horizontale richting zijn vooruit gegaan, kunnen we vinden met de
-	baanvergelijking. We weten namelijk hoever de pakketten naar beneden
-	zijn gevallen en wat hun beginsnelheid is:
+	De afstand waarover de voedselpakketten in horizontale richting zijn vooruit gegaan, kunnen we vinden met de baanvergelijking. We weten namelijk hoever de pakketten naar beneden zijn gevallen en wat hun beginsnelheid is:
 	\begin{eqnarray*}
-	y&=&\frac{g}{2v_0^2}x^2\\
-	&\Downarrow&\\
-	x&=&v_0\sqrt{\frac{2y}{g}}=1712\rm\,m
+		y&=&\frac{g}{2v_0^2}x^2\\
+		&\Downarrow&\\
+		x&=&v_0\sqrt{\frac{2y}{g}}=\SI{1712}{m}
 	\end{eqnarray*}
-	De valtijd voor de pakketten vinden we o.a. door naar de verticale
-	valbeweging te kijken. Deze gebeurt onafhankelijk van wat er in de
-	horizontale richting gebeurt, zodat:
+	De valtijd voor de pakketten vinden we o.a. door naar de verticale valbeweging te kijken. Deze gebeurt onafhankelijk van wat er in de horizontale richting gebeurt, zodat:
 	\begin{eqnarray*}
-	y&=&\frac{1}{2}gt^2\\
-	&\Downarrow&\\
-	t&=&\sqrt{\frac{2y}{g}}=13,7\rm\,s
-	\end{eqnarray*}}
-	\end{enumerate}
-	
-	\cleardoublepage
-	%%\newpage
+		y&=&\frac{1}{2}gt^2\\
+		&\Downarrow&\\
+		t&=&\sqrt{\frac{2y}{g}}=\SI{13,7}{s}
+	\end{eqnarray*}
+\end{example}
 	
 \end{document}
