--- a/semester1.tex
+++ b/semester1.tex
@@ -44,22 +44,27 @@
 \activitychapter{6dejaar/kinematica/knmtc_bgrppn_oef.tex}
 
 
+
 \part{Eendimensionale bewegingen}
 
 \activitychapter{6dejaar/kinematica/knmtc_1dim_intro.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_begrippen.tex}
 \activitychapter{6dejaar/kinematica/knmtc_1dim_ERB.tex}
-\activitychapter{6dejaar/kinematica/knmtc_1dim_EVRB_calculus.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex}
 \activitychapter{6dejaar/kinematica/knmtc_1dim_oplossingsstrategie.tex}
 \activitychapter{6dejaar/kinematica/knmtc_1dim_verticale_worp.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_oef.tex}
+\activitysection{6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex}
+\activitysection{6dejaar/kinematica/knmtc_1dim_oef_vraagstukken.tex}
+\activitysection{6dejaar/kinematica/knmtc_1dim_oef_vraagstukken_valbeweging.tex}
 
 
 
 \part{Tweedimensionale bewegingen}
 
-
 \activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
 \activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
-\activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex}
+% \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex} \todo{Moet hier weg. Eigenschap snelheid raakt aan de baan > basisbegrippen. Ook voorbeeld naar basisbegrippen}
 \activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
 \activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
 
